linting issues addressed.
linting issues addressed.

--- a/src/visualizations/html_content/delta_trade_analysis.html
+++ b/src/visualizations/html_content/delta_trade_analysis.html
@@ -1,5 +1,5 @@
 <div style="font-size: 18px;">
-    <p>The above <a href="/Rebalance_Analysis" target="_self">Rebalance Data Analysis</a> page shows only single-period trade analysis. However, Portfolio Managers are often more interested about delta trade analysis. 
+    <p>The above <a href="/Rebalance_Analysis" target="_self">Rebalance Analysis</a> page shows only single-period trade analysis. However, Portfolio Managers are often more interested about delta trade analysis. 
     <br>Its more insightful to know delta(changes) in portfolio composition versus the pre-rebalance situation. It important to know why and how the portfolio composition is changing and the heuristics of trade attributions.</p>
     <p>Following visuals will be helpful for Portfolio managers (PMs) to track the exposure changes across multiple dimensions, such as:</p>
     <ul>
